Closed
Bug 223551
Opened 22 years ago
Closed 22 years ago
Printing produces illegal postscript
Categories
(Core :: Printing: Output, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: andreas, Assigned: kherron+mozilla)
Details
Attachments
(2 files)
|
30.79 KB,
application/postscript
|
Details | |
|
2.63 KB,
patch
|
tor
:
review+
bzbarsky
:
superreview+
roc
:
approval1.6a+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:1.6a) Gecko/20031023
Build Identifier: Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:1.6a) Gecko/20031023
Suspected regression from bug 80190.
Reproducible: Sometimes
Steps to Reproduce:
1. Open new browser (recently built from cvs head)
2. Print (possbly to file) using postscript output
3.
Actual Results:
Both ghostview and printer displays an error
Expected Results:
I got out some pages, seemed lovely. Would hope it did that every time. :)
Current page setup was in landscape, that might have affected. Print preview
worked as it should. Will attach borked postscript file.
| Reporter | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Comment 2•22 years ago
|
||
Confirming. The PS output routines have to temporarily set the numeric locale so
that decimals are printed using periods instead of commas. Some of the functions
are missing these calls, so they're outputting floating-point numbers containing
commas.
I'll attach a patch shortly.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 4•22 years ago
|
||
Set the locale to "C" while printing the document header and each page header,
to make sure any floating-point numbers are printed with periods instead of
commas.
| Assignee | ||
Comment 5•22 years ago
|
||
Comment on attachment 134043 [details] [diff] [review]
Set "C" locale in a couple of additional places
This needs to go in before 1.6a is released. Printing is broken for any locale
that doesn't use period for decimals.
Attachment #134043 -
Flags: superreview?(roc)
Attachment #134043 -
Flags: review?(tor)
| Reporter | ||
Comment 6•22 years ago
|
||
Aha, locale dependant. Good to catch that one. :)
Attachment #134043 -
Flags: review?(tor) → review+
Comment 7•22 years ago
|
||
Comment on attachment 134043 [details] [diff] [review]
Set "C" locale in a couple of additional places
sr=bzbarsky (trying to atone for not getting to the other patch fast enough
;)).
Could this be approved for 1.6a? Otherwise, all our European users are going
to be very unhappy...
Attachment #134043 -
Flags: superreview?(roc)
Attachment #134043 -
Flags: superreview+
Attachment #134043 -
Flags: approval1.6a?
Comment on attachment 134043 [details] [diff] [review]
Set "C" locale in a couple of additional places
Can someone else check this in?
Attachment #134043 -
Flags: approval1.6a? → approval1.6a+
Checked in - thanks for finding the problem/fix so fast.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•