Bug 223551 - postscript output invalid in locales not using periods for decimals.  Patch by kjh-5727@comcast.net,  r=tor, sr=bzbarsky, a=roc.